--- a/.github/workflows/shell.yml
+++ b/.github/workflows/shell.yml
@@ -17,3 +17,12 @@ jobs:
           printenv | sort    >> _site/index.html
           echo "</pre>"      >> _site/index.html
 
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          # Upload entire repository
+          path: '_site'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
+
