--- a/.github/workflows/shell.yml
+++ b/.github/workflows/shell.yml
@@ -2,6 +2,11 @@ name: Shell
 
 on: push
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,6 +22,8 @@ jobs:
           printenv | sort    >> _site/index.html
           echo "</pre>"      >> _site/index.html
 
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
